--- a/ProductOrderApp/Views/Orders/Details.cshtml
+++ b/ProductOrderApp/Views/Orders/Details.cshtml
@@ -1,54 +1,68 @@
 ﻿@model ProductOrderApp.Models.DTOs.OrderDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Order Details";
 }
 
-<h1>Details</h1>
+<h1>Order Details</h1>
 
 <div>
-    <h4>OrderDto</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderNumber)
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.OrderNumber)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.OrderNumber)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CustomerName)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.CustomerName)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CustomerEmail)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.CustomerEmail)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.OrderDate)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.OrderDate)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Status)</dt>
+        <dd class="col-sm-9">
+            <span class="badge bg-@(Model.Status switch {
+                ProductOrderApp.Models.Entities.OrderStatus.Pending => "warning",
+                ProductOrderApp.Models.Entities.OrderStatus.Processing => "info",
+                ProductOrderApp.Models.Entities.OrderStatus.Shipped => "primary",
+                ProductOrderApp.Models.Entities.OrderStatus.Delivered => "success",
+                ProductOrderApp.Models.Entities.OrderStatus.Cancelled => "danger",
+                _ => "secondary"
+            })">
+                @Model.StatusName
+            </span>
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerEmail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalAmount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalAmount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.TotalAmount)</dt>
+        <dd class="col-sm-9"><strong>$@Html.DisplayFor(model => model.TotalAmount)</strong></dd>
     </dl>
+
+    <h4>Order Items</h4>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Unit Price</th>
+                <th>Total Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.OrderItems)
+            {
+                <tr>
+                    <td>@item.ProductName</td>
+                    <td>@item.Quantity</td>
+                    <td>$@item.UnitPrice</td>
+                    <td>$@item.TotalPrice</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
