--- a/ProductOrderApp/Views/Orders/Delete.cshtml
+++ b/ProductOrderApp/Views/Orders/Delete.cshtml
@@ -1,61 +1,60 @@
-﻿@using ProductOrderApp.Models.Entities
-@model ProductOrderApp.Models.DTOs.OrderDto
+﻿@model ProductOrderApp.Models.DTOs.OrderDto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Order";
 }
 
-<h1>Delete</h1>
+<h1>Delete Order</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this order?</h3>
 <div>
-    <h4>OrderDto</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerEmail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalAmount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalAmount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DropDownListFor(model => model.Status, Html.GetEnumSelectList<OrderStatus>(),
-                     "Select Status",
-                     new { @class = "form-control" })
-            )
-        </dd>
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.OrderNumber)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.OrderNumber)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CustomerName)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.CustomerName)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CustomerEmail)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.CustomerEmail)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.OrderDate)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.OrderDate)</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Status)</dt>
+        <dd class="col-sm-9">@Model.StatusName</dd>
+
+        <dt class="col-sm-3">@Html.DisplayNameFor(model => model.TotalAmount)</dt>
+        <dd class="col-sm-9"><strong>$@Html.DisplayFor(model => model.TotalAmount)</strong></dd>
     </dl>
-    
+
+    <h4>Order Items</h4>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Unit Price</th>
+                <th>Total Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.OrderItems)
+            {
+                <tr>
+                    <td>@item.ProductName</td>
+                    <td>@item.Quantity</td>
+                    <td>$@item.UnitPrice</td>
+                    <td>$@item.TotalPrice</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
